--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,19 @@ attrs==23.1.0
 Babel==2.9.1
 certifi==2023.11.17
 charset-normalizer==3.3.2
+Deprecated==1.2.14
+distro==1.9.0
 dnspython==2.4.2
 frozenlist==1.4.1
 idna==3.6
 magic-filter==1.0.12
 multidict==6.0.4
+netaddr==0.10.1
 pymongo==4.6.1
 python-dotenv==1.0.0
 pytz==2023.3.post1
+requests==2.31.0
+urllib3==2.1.0
+wrapt==1.16.0
 yarl==1.9.4
+yookassa==3.0.0
